# wordsearch-generator

./: .gitignore  Cargo.toml  wasm-pack.sh
src/: generator.rs  lib.rs  main.rs  model.rs  ui.rs  wasm.rs
src/generator/: mod.rs  word_set.rs
src/model/: mod.rs  positioner.rs  word_factory.rs
www/: index.html  index.js  package-lock.json  package.json  style.css
