[package]
name = "wordsearch"
version = "0.1.0"
authors = ["Fadoa Glauss Vieira <fadoa.glauss@gmail.com>",  "Victor Guerra Veloso <victorgvbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
