[package]
name = "wordsearch"
version = "0.1.0"
authors = ["Fadoa Glauss Vieira <fadoa.glauss@gmail.com>",  "Victor Guerra Veloso <victorgvbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = {version = "0.1.6", optional = true}
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.7.3"
js-sys = "0.3.40"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"